--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,13 @@ body {
   margin: 0;
   padding: 0;
   background-color: #fef9c3; /* Light yellow */
+  
 }
 
 header {
-  background-color: #fde047; /* Bright yellow */
-  padding: 20px 0;
+  background-color: transparent; /* Bright yellow */
+  padding: 2px 0;
+  width: 100%;  
 }
 
 header .container {
@@ -38,35 +40,121 @@ header ul li {
   color: #333;
 }
 
+header.bg-image{
+  /* image 10 (1) (3) 1 */
+
+position: absolute;
+size: cover;
+size-adjust: 100%;
+width: 1440px;
+height: 860px;
+left: 0px;
+top: 0px;
+
+/* background: url("./assets/yellowBG.png"); */
+
+}
 main {
   max-width: 1200px;
   margin: 20px auto;
   padding: 0 20px;
+  /* image 10 (1) (3) 1 */
+  background-image: image(10);
+
+
 }
 
 section.text-center {
   text-align: center;
   margin-bottom: 40px;
+  
 }
+
 
 section.text-center h2 {
   font-size: 28px;
   font-weight: bold;
+  /* Augmented Reality for Teaching Anatomy Education */
+
+position: absolute;
+width: 539px;
+height: 228px;
+left: 112px;
+text-align: left;
+top: 280px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 700;
+font-size: 50px;
+line-height: 75px;
+
+color: #000000;
+
+
 }
 
 section.text-center p {
-  margin-top: 10px;
-  color: #555;
+
+  /* ARnatomy uses augmented reality to make anatomy education interactive and engaging for grade-level learners, bringing the human body to life in a whole new way. */
+
+position: absolute;
+width: 581px;
+left: 112px;
+height: 40px;
+/* left: 112px; */
+top: 518px;
+text-align: left;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 13px;
+line-height: 30px;
+
+color: #000000;
+
+
+}
+header tab{
+position: absolute;
+width: 771px;
+height: 771px;
+left: 736px;
+top: 147px;
+
 }
 
 section.text-center button {
-  background-color: #fb923c; /* Orange */
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-top: 20px;
+/* Rectangle 23 */
+
+position: absolute;
+width: 213px;
+height: 63px;
+left: calc(50% - 100px/2 - 501.5px);
+top: 589px;
+
+background: #FF9900;
+border-radius: 10px;
+border-color: transparent;
+
+
+/* Download */
+
+position: absolute;
+width: 123px;
+height: 37px;
+left: calc(50% - 123px/2 - 501.5px);
+top: 603px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 35px;
+
+color: #FDFDFD;
+
+
 }
 
 .card {
@@ -101,3 +189,6 @@ section.text-center button {
   gap: 20px;
 }
  
+/* LOGO_APP 1 */
+
+
